--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/levdavid/jira-search",
   "dependencies": {
+    "body-parser": "^1.13.1",
     "ejs": "^2.3.1",
     "express": "^4.12.4"
   }
